--- a/history.html
+++ b/history.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="keywords" content="shop, buy, cart, smart">
-  <meta name="description" content="Парикмахерский салон Анна г. Саратов. Записаться на стрижку можно по телефону: 8(800)555-35-35 ">
-  <title>Парикмахерская "Анна"</title>
+  <meta name="description" content="Барбершоп г. Мытищи. Записаться на стрижку можно по телефону: 8(800)555-35-35 ">
+  <title>Барбершоп "У Виталика"</title>
   <link rel="shortcut icon" href="https://www.publicdomainpictures.net/pictures/130000/nahled/white-scissors.jpg" type="image/x-icon">
-  <link rel = "stylesheet" href = "style.css" media="only screen and (min-width:480px)" >
+  <link rel = "stylesheet" href = "style.css" >
   <link rel = "stylesheet" href = "fonts.css">
 
 </head>
@@ -14,11 +14,12 @@
 
     <div class = "menu"><img width="35px" height = "35px" src = "resourses\8738.png">
      <ul>
-        <li><a href ="#head"><i class = "tr">Вверх</i></a></li>
-        <li><a href ="#employee"><i class = "tr">Работники</i></a></li>
-        <li><a href ="#haircut"><i class = "tr">Стрижки</i></a></li>
+        <li><a href ="index.html#head"><i class = "tr">Вверх</i></a></li>
+        <li><a href ="index.html#employee"><i class = "tr">Работники</i></a></li>
+        <li><a href ="index.html#haircut"><i class = "tr">Стрижки</i></a></li>
         <li><a href ="contact.html"><i class = "tr">Контакты</i></a></li>
-        <li><a href ="#work"><i class = "tr">Работа у нас</i></a></li>
+        <li><a href ="contact.html#map"><i class = "tr">Карта</i></a></li>
+        <li><a href ="index.html#work"><i class = "tr">Работа у нас</i></a></li>
         <li><a href ="index.html"><i class = "tr">На главную</i></a></li>
       </ul>
     </div>
@@ -39,30 +40,31 @@
         </article>
 
         <div id="head"><h2>Наши преимущества</h2></div>
-        <div class="icons">
 
 
-          <div class="iconblock">
-              <div class="icon">
-                <img src="resourses\time.png" width="150" height="120" />
+          <ul class="icons">
+            <li class="icon_row">
+              <div class="icon_img">
+                <img src="resourses\time.png" width="120" height="120" />
               </div>
-            	<p>Наши мастера работают очень быстро!</p>
-          </div>
+              <div class="icon_text">Наши мастера работают очень быстро!</div>
+            </li>
+            <li class="icon_row">
+              <div class="icon_img">
+                <img src="resourses\good.png" width="120" height="120" />
+              </div>
+              <div class="icon_text">Высочайшее качество работы!</div>
+            </li>
+            <li class="icon_row">
+              <div class="icon_img">
+                <img src="resourses\comf.png" width="120" height="120" />
+              </div>
+              <div class="icon_text">Самые комфортабельные условия!</div>
+            </li>
+          </ul>
 
-          <div class="iconblock">
-            	<div class="icon">
-            		<img src="resourses\good.png" width="120" height="120"/>
-            	</div>
-            	<p>Высочайшее качество работы!</p>
-         </div>
-         <div class="iconblock">
-             <div class="icon">
-               <img src="resourses\comf.png" width="120" height="120"/>
-             </div>
 
-             <p>Самые комфортабельные условия!</p>
-        </div>
-      </div>
+
       </div>
       <footer id="contacs">
         <div class = "contactblock"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMyFe4ZDQmU0bytFsPEfbURlA4T-AlZSBt7w&usqp=CAU"><div class="contact">89472339032</div></div>
