--- a/employeePage.html
+++ b/employeePage.html
@@ -23,7 +23,7 @@
   </div>
   <script>
 
-  var data = '[{"id" : 1,"name" : "Эдвард", "text" : "Стилист с рождения. Научился работать инструментами раньше, чем говорить. Мастер мирового уровня.","haircut" : "Боб,Каре,Лестница,Каскад,Топ нот,Гранж","contact" : "89543216543,ed@yandex.ru,@kekwaitme,@eddddd"}, {"id" : 2,"name" : "Фреди","text" : "Непревзойденный мастер оформления бород. Всегда знает то, что нужно клиенту.","img" : "","haircut" : "Боб,Каре,Лестница,Каскад,Топ нот,Гранж","contact" : ""}]';
+  var data = '[{"id" : 1,"name" : "Эдвард", "text" : "Стилист с рождения. Научился работать инструментами раньше, чем говорить. Мастер мирового уровня.","haircut" : "Боб,Каре,Лестница,Каскад,Топ нот,Гранж","contact" : "89441236543,ed@yandex.ru,@handy-eddie,@eddddd"}, {"id" : 2,"name" : "Фреди","text" : "Непревзойденный мастер оформления бород. Всегда знает то, что нужно клиенту.","img" : "","haircut" : "Боб,Каре,Лестница,Каскад,Топ нот,Гранж","contact" : "89446661234,fred.kruger@yandex.ru,@feddie,@freddddd"}]';
   GetData();
   function GetData() {
     var score = decodeURIComponent(location.search.substr(1)).split('&');
